[project]
name = "fastapi-request-cancelling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn>=0.32.1",
    "starlette>=0.41.3",
    "sse-starlette>=2.1.3",
]

[project.scripts]
start = "fastapi_request_cancelling.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
